# waxwing-alert

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: release.yml
docs/: PRIVACY.md  TERMS.md  waxwing-alerts.md
src/: commands.rs  config.rs  counties.rs  crypto.rs  cursor.rs  ebird.rs  format.rs  lib.rs  main.rs  model.rs  onboarding.rs  poller.rs  purge.rs  reaper.rs  states.rs  store.rs
tests/: ebird_api.rs
